--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -17,11 +17,13 @@
     "@acme/auth": "^0.1.0",
     "@acme/db": "^0.1.0",
     "@acme/types": "^0.1.0",
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.29.23",
+    "@tanstack/react-table": "^8.10.7",
     "@trpc/client": "^10.34.0",
     "@trpc/next": "^10.34.0",
     "@trpc/react-query": "^10.34.0",
@@ -32,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-qr-code": "^2.0.12",
     "superjson": "1.9.1",
     "zod": "^3.21.4"
   },
