--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,6 +15,8 @@
     "@acme/db": "^0.1.0",
     "@trpc/client": "^10.34.0",
     "@trpc/server": "^10.34.0",
+    "otplib": "^12.0.1",
+    "short-uuid": "^4.2.2",
     "superjson": "1.9.1",
     "zod": "^3.21.4"
   },
