--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "web",
-  "version": "1.0.0",
+  "name": "@acme/app-web",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "lint": "next lint",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "^13.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native-web": "^0.18.4",
-    "ui": "workspace:*"
+    "@acme/feature-home": "*",
+    "next": "^13.2.1",
+    "react": "~18.2.0",
+    "react-dom": "~18.2.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@types/node": "^18.11.5",
-    "@types/react": "^18.2.5",
-    "@types/react-dom": "^18.2.4",
-    "babel-plugin-react-native-web": "^0.18.4",
-    "eslint": "^8.19.0",
-    "tsconfig": "workspace:*",
-    "typescript": "^4.7.4"
+    "@acme/eslint-config": "*",
+    "babel-plugin-react-native-web": "^0.19.6",
+    "eslint": "^8.34.0",
+    "eslint-config-next": "^13.2.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@acme/eslint-config"
+    ],
+    "ignorePatterns": [
+      "node_modules",
+      ".next",
+      "public"
+    ]
   }
 }
