--- a/package.json
+++ b/package.json
@@ -1,14 +1,33 @@
 {
   "private": true,
+  "name": "@acme/monorepo",
   "scripts": {
     "dev": "turbo dev",
+    "dev:mobile": "turbo dev --filter=\"{./apps/mobile}...\"",
+    "dev:web": "turbo dev --filter=\"{./apps/web}...\"",
+    "lint": "turbo lint",
+    "test": "turbo test",
     "build": "turbo build",
-    "clean": "turbo clean && rm -rf node_modules",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore"
+    "build:mobile": "turbo build --filter=\"...{./apps/mobile}\"",
+    "build:web": "turbo build --filter=\"...{./apps/web}\""
   },
   "devDependencies": {
-    "prettier": "^2.7.1",
-    "turbo": "latest"
+    "turbo": "^1.10.7",
+    "typescript": "^4.9.5"
   },
-  "packageManager": "pnpm@7.27.1"
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@babel/*",
+        "expo-modules-*",
+        "typescript"
+      ]
+    }
+  },
+  "prettier": {
+    "printWidth": 100,
+    "tabWidth": 2,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  }
 }
