--- a/packages/feature-home/package.json
+++ b/packages/feature-home/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "@acme/ui",
+  "name": "@acme/feature-home",
   "version": "1.0.0",
-  "description": "Acme UI components for React Native",
+  "description": "Acme home feature for React (Native)",
   "author": "Cedric van Putten <me@bycedric.com>",
   "license": "MIT",
   "main": "./build/index.js",
@@ -17,6 +17,9 @@
     "lint": "eslint --ext js,ts,tsx .",
     "test": "jest",
     "build": "tsup --clean"
+  },
+  "dependencies": {
+    "@acme/ui": "*"
   },
   "devDependencies": {
     "@acme/eslint-config": "*",
