--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,34 +1,26 @@
 {
-  "name": "@acme/app-web",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "lint": "next lint",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@acme/feature-home": "*",
-    "next": "^13.2.1",
-    "react": "~18.2.0",
-    "react-dom": "~18.2.0",
-    "react-native-web": "~0.19.6"
+    "@supabase/ssr": "latest",
+    "@supabase/supabase-js": "latest",
+    "autoprefixer": "10.4.15",
+    "geist": "^1.0.0",
+    "next": "latest",
+    "postcss": "8.4.29",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@acme/eslint-config": "*",
-    "babel-plugin-react-native-web": "^0.19.6",
-    "eslint": "^8.34.0",
-    "eslint-config-next": "^13.2.1"
-  },
-  "eslintConfig": {
-    "extends": [
-      "@acme/eslint-config"
-    ],
-    "ignorePatterns": [
-      "node_modules",
-      ".next",
-      "public"
-    ]
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.8",
+    "@types/react-dom": "18.2.5",
+    "encoding": "^0.1.13"
   }
 }
