--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -6,9 +6,7 @@
     "monorepo": {
       "cache": {
         "key": "turbo",
-        "paths": [
-          "../../node_modules/.cache/turbo"
-        ]
+        "paths": ["../../node_modules/.cache/turbo"]
       }
     },
     "development": {
