--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "@acme/app-mobile",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "dev": "expo start",
     "lint": "eslint --ext js,ts,tsx .",
@@ -15,14 +15,24 @@
     "eas-build-post-install": "pnpm run -w build:mobile"
   },
   "dependencies": {
+    "@tamagui/font-inter": "^1.78.0",
+    "@tamagui/shorthands": "^1.78.0",
+    "@tamagui/themes": "^1.78.0",
     "expo": "^49.0.10",
+    "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.8",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-web": "~0.19.6"
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
+    "tamagui": "^1.78.0"
   },
   "devDependencies": {
     "@acme/eslint-config": "*",
