--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "@tamagui/font-inter": "^1.78.0",
+    "@tamagui/lucide-icons": "^1.78.0",
     "@tamagui/shorthands": "^1.78.0",
     "@tamagui/themes": "^1.78.0",
     "expo": "^49.0.10",
+    "expo-barcode-scanner": "~12.5.3",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.8",
     "expo-linking": "~5.0.2",
@@ -31,11 +33,13 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^14.0.0",
     "react-native-web": "~0.19.6",
     "tamagui": "^1.78.0"
   },
   "devDependencies": {
     "@acme/eslint-config": "*",
+    "@acme/tba": "workspace:^1.0.0",
     "@babel/core": "^7.19.3",
     "@types/react": "~18.2.14",
     "@types/react-dom": "~18.0.11",
