--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,72 +1,53 @@
 {
-  "private": true,
-  "name": "@acme/app-mobile",
-  "version": "1.0.0",
-  "main": "expo-router/entry",
+  "name": "@acme/expo",
+  "version": "0.1.0",
+  "main": "index.tsx",
   "scripts": {
-    "dev": "expo start",
-    "lint": "eslint --ext js,ts,tsx .",
-    "build": "expo export --output-dir ./build --platform all",
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eas-build-pre-install": "npm install --global pnpm@7.x",
-    "eas-build-post-install": "pnpm run -w build:mobile",
-    "check:expo": "expo diagnostics -w"
-
+    "clean": "git clean -xdf .expo .turbo node_modules",
+    "dev": "expo start --ios",
+    "dev:android": "expo start --android",
+    "dev:ios": "expo start --ios",
+    "lint": "eslint .",
+    "lint:fix": "pnpm lint --fix",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@tamagui/font-inter": "^1.78.0",
-    "@tamagui/lucide-icons": "^1.78.0",
-    "@tamagui/shorthands": "^1.78.0",
-    "@tamagui/themes": "^1.78.0",
-    "expo": "^49.0.10",
-    "expo-barcode-scanner": "~12.5.3",
-    "expo-constants": "~14.4.2",
-    "expo-dev-client": "~2.4.8",
-    "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.0",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.10",
+    "@expo/metro-config": "^0.7.1",
+    "@shopify/flash-list": "1.4.3",
+    "@tanstack/react-query": "^4.29.23",
+    "@trpc/client": "^10.34.0",
+    "@trpc/react-query": "^10.34.0",
+    "@trpc/server": "^10.34.0",
+    "expo": "^48.0.19",
+    "expo-constants": "~14.2.1",
+    "expo-linking": "~4.0.1",
+    "expo-router": "^1.5.3",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.48.2",
-    "react-native": "0.72.4",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-prompt": "^1.0.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "^14.0.0",
-    "react-native-web": "~0.19.6",
-    "tamagui": "^1.78.0"
+    "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.3",
+    "react-native-screens": "~3.20.0",
+    "superjson": "1.9.1"
   },
   "devDependencies": {
-    "@acme/eslint-config": "*",
-    "@acme/tba": "workspace:^1.0.0",
-    "@babel/core": "^7.19.3",
-    "@types/react": "~18.2.14",
-    "@types/react-dom": "~18.0.11",
-    "@types/react-native": "~0.70.6",
-    "babel-preset-expo": "~9.5.0"
+    "@acme/api": "^0.1.0",
+    "@acme/eslint-config": "^0.2.0",
+    "@acme/tailwind-config": "^0.1.0",
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/runtime": "^7.21.5",
+    "@expo/config-plugins": "^6.0.2",
+    "@types/babel__core": "^7.20.0",
+    "@types/react": "^18.2.14",
+    "@types/webpack-env": "^1.18.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.45.0",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   },
-  "eslintConfig": {
-    "extends": "@acme/eslint-config",
-    "ignorePatterns": [
-      "node_modules",
-      "build",
-      ".expo",
-      ".expo-shared"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "*.js"
-        ],
-        "env": {
-          "node": true
-        }
-      }
-    ]
-  }
+  "private": true
 }
