--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -1,6 +1,13 @@
 {
-  "extends": "expo/tsconfig.base",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "strict": true
-  }
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["./src/*"]
+    },
+    "jsx": "react-native",
+    "types": ["nativewind/types", "webpack-env"]
+  },
+  "include": ["expo-plugins", "src", "*.ts", "**/*.js", "index.tsx"],
+  "exclude": ["node_modules", "*.config.js"]
 }
