--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/api",
+  "name": "@acme/auth",
   "version": "0.1.0",
   "main": "./index.ts",
   "types": "./index.ts",
@@ -11,11 +11,13 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@acme/auth": "^0.1.0",
     "@acme/db": "^0.1.0",
-    "@trpc/client": "^10.34.0",
-    "@trpc/server": "^10.34.0",
-    "superjson": "1.9.1",
+    "@next-auth/prisma-adapter": "^1.0.6",
+    "@t3-oss/env-nextjs": "^0.6.0",
+    "next": "^13.4.9",
+    "next-auth": "^4.22.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
